# tridi

./: .gitmodules  CHANGELOG.md  LICENSE  default.nix  hie  hie.yaml  nixpkgs.nix  package.yaml  readme.md  shell.nix  tmplhs.cabal  util.nix
spec/Tmpl/: Tmpl.hs
spec/Tridi/: Spec.hs
src/: Main.hs
src/Tridi/GL/: Input.hs  Loop.hs  Observer.hs  Utils.hs
