cabal-version: 2.2

name:           tmplhs
version:        0.1.0.0
synopsis:       tmplhs description
author:         Vito Canadi
maintainer:     vito.canadi@gmail.com
license:        NONE
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  ghc-options: -Wall -Werror=redundant-constraints -Werror=unused-imports
  build-depends:
    , base             >=4.15 && <5
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      spec
  default-extensions:
      LambdaCase
      OverloadedStrings
      DefaultSignatures
      ScopedTypeVariables
      TypeApplications
      DeriveGeneric
  ghc-options: -Wall -Werror=redundant-constraints -Werror=unused-imports
  build-depends:
    , base
    , hspec
    , tmplhs
  default-language: Haskell2010
